Fix bugs in box/section alignment

--- a/src/features/tabs.sass
+++ b/src/features/tabs.sass
@@ -19,8 +19,5 @@
     @include white-black-border
     @include blue-solid
     @include outlined-font
-    padding-left: 2px
-    padding-right: 2px
-    padding-top: 2px
     font-family: "Candal", "Georgia", "Arial"
     font-size: 24px
