--- a/src/noctis.sass
+++ b/src/noctis.sass
@@ -133,8 +133,7 @@ $megalos-blue: #4e8eb2
   .noctis-section
     color: black
     background: white
-    padding: 0.5em
-    width: 100%
+    padding: 0.5rem
 
   .noctis-section-icon
     @include emoji
